cloud/w8/day-b/k8s-mini-web-platform/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: day-b
  labels:
    purpose: w8-k8s-self-study
