cloud/w8/day-b/k8s-mini-web-platform/manifests/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-web
  namespace: day-b
  labels:
    app: student-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-web
  template:
    metadata:
      labels:
        app: student-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80

          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"

      volumes:
        - name: web-content
          configMap:
            name: student-web-content
