cloud/w8/day-b/k8s-mini-web-platform/manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-web-service
  namespace: day-b
spec:
  selector:
    app: student-web
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
